# liboggtag

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build_xcframework.sh
include/oggtag/: module.modulemap  oggtag.h  oggtag_error.h  oggtag_types.h
src/: oggtag.c
src/flac/: flac_meta.c  flac_meta.h
src/io/: file_io.c  file_io.h
src/ogg/: ogg_crc.c  ogg_crc.h  ogg_stream.c  ogg_stream.h
src/util/: buffer.c  buffer.h  ogg_buffer_ext.h  string_util.c  string_util.h
src/vorbis_comment/: vorbis_comment.c  vorbis_comment.h
tests/: CMakeLists.txt  test_oggtag.c
